# FlockingWars

./: .gitignore  CMakeLists.txt  README  imgui.ini
config/: safe_ref.lua
ext/imgui/: imconfig.h  imgui-sfml.cpp  imgui-sfml.h
res/: buttonTexture.psd  flocking_logo.psd  icon.psd  icon_256.icl
res/config/: GamePlay.txt  keys.xml
res/shaders/: frag.glsl  vert.glsl
src/: Entity.hpp  EntityManager.hpp  FlockingMain.cpp  InteractiveMesh.cpp  InteractiveMesh.h  QuadTree.cpp  QuadTree.h  main.h
src/Entities/: Bullet.cpp  Bullet.h  Entity.h  Explosion.cpp  Explosion.h  Flock.cpp  Flock.h  Player.cpp  Player.h  Spawner.cpp  Spawner.h
src/GameStates/: GameLevel.cpp  GameLevel.h  GameState.h  Menu.cpp  Menu.h
src/Resources/: resource.h  resource.rc
src/Systems/: InputConstants.h  InputManager.cpp  InputManager.h  UserInterface.cpp  UserInterface.h  console.hpp
src/Systems/Graphics/: Font.cpp  Font.h  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.h
src/Systems/Graphics/Shaders/: shaders.cpp  shaders.h
src/Systems/ResourceManager/: FileIO.h
src/Util/: Mat4.h  Vec2f.h  Vec3f.h  includes.cpp  includes.h  init.cpp  init.h  text.cpp  text.h
